--- a/LandModel.ipynb
+++ b/LandModel.ipynb
@@ -23,7 +23,9 @@
    "id": "42d24214-47b7-4a57-bfb0-009c7db8f735",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data=pd.read_csv()"
+   ]
   }
  ],
  "metadata": {
