--- a/LandModel.ipynb
+++ b/LandModel.ipynb
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "id": "799ccdd7-6e82-4a5d-b561-d50efcab8161",
    "metadata": {},
    "outputs": [],
@@ -803,11 +803,11 @@
     "# Example future data (replace these values with your actual data)\n",
     "future_data3 = {\n",
     "    'Type': ['Land'],  # Replace with actual values for prediction\n",
-    "    'Place': ['Colombo 3'],  # Replace with actual place\n",
-    "    'Status': ['Available'],  # Replace with the status (Available or Sold)\n",
+    "    'Place': [''],  # Replace with actual place\n",
+    "    'Status': [''],  # Replace with the status (Available or Sold)\n",
     "    'Balcony': ['Yes'],  # Yes or No for Balcony\n",
-    "    'Furnished': ['Yes'],  # Yes, Semi, or No\n",
-    "    'Loan': ['Available'],  # Available or Not Available\n",
+    "    'Furnished': [''],  # Yes, Semi, or No\n",
+    "    'Loan': [''],  # Available or Not Available\n",
     "    '2022 Price (LKR)': [148862668],  # Example values for the 2022 price\n",
     "    '2021 Price (LKR)': predicted_price,  # Example values for the 2021 price\n",
     "    '2020 Price (LKR)': predicted_price2,  # Example values for the 2020 price\n",
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "id": "35543e2f-380d-4f6d-a4d7-b19887408dcb",
    "metadata": {},
    "outputs": [
@@ -835,7 +835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Price: 99,547,646.73\n"
+      "Predicted Price: 102,659,451.34\n"
      ]
     }
    ],
@@ -862,12 +862,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import joblib\n",
-    "\n",
-    "joblib.dump(Rmodel, 'house_price_model.pkl')\n",
-    "joblib.dump(preprocessor, 'preprocessor.pkl')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
